testsuite/tests/typecheck/should_fail/T2534.stderr

T2534.hs:3:13: error:
    Couldn't match type ‘[b0]’ with ‘a0 -> [b0]’
    Expected type: [a0] -> [b0] -> [b0]
      Actual type: [a0] -> (a0 -> [b0]) -> [b0]
    Relevant bindings include foo :: [b0] (bound at T2534.hs:3:1)
    In the first argument of ‘foldr’, namely ‘(>>=)’
    In the expression: foldr (>>=) [] []
    In an equation for ‘foo’: foo = foldr (>>=) [] []
